logs/idiscover.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/idiscover'...
Compiling './lib/python3.5/site-packages/idiscover/arp.py'...
***   File "./lib/python3.5/site-packages/idiscover/arp.py", line 59
    print '{ip} is unreachable'.format(ip=ip_address)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idiscover/data'...
Compiling './lib/python3.5/site-packages/idiscover/discover.py'...
***   File "./lib/python3.5/site-packages/idiscover/discover.py", line 34
    print 'Ignoring broadcast ip: {broadcast}'.format(broadcast=str(network.broadcast()))
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idiscover/oui.py'...
***   File "./lib/python3.5/site-packages/idiscover/oui.py", line 53
    print oui.find_manuf('0080E5')
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idiscover-1.1.egg-info'...
Listing './lib/python3.5/site-packages/ipcalc-1.99.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
